--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,6 +15,10 @@ header>h1{
 .grid-50{
 
     border: solid 2px;
+    margin-top: 20px;
+    margin-left: 0;
+    margin-right: 10px;
+    margin-bottom: 0;
 }
 
 .grid-100{
