--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,16 +12,20 @@ header>h1{
     font-size: 36px;
 }
 
-.grid-50{
+.grid-45{
 
     border: solid 2px;
     margin-top: 20px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 0;
 }
 
 .grid-100{
 
     border: solid 2px;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 0;
 }
