--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,17 +15,17 @@ header>h1{
 .grid-45{
 
     border: solid 2px;
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-bottom: 0;
 }
 
 .grid-100{
 
     border: solid 2px;
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-top: 5%;
+    margin-left: 0;
+    margin-right: 0;
     margin-bottom: 0;
 }
