--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -17,7 +17,7 @@ header>h1{
     border: solid 2px;
     margin-top: 5%;
     margin-left: 0;
-    margin-right: 2%;
+    margin-right: 0;
     margin-bottom: 0;
 }
 
