--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,7 +15,7 @@ header>h1{
 .grid-40{
 
     border: solid 2px;
-    margin-top: 5%;
+    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
@@ -24,7 +24,7 @@ header>h1{
 .grid-100{
 
     border: solid 2px;
-    margin-top: 5%;
+    margin-top: 0;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
