--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -12,19 +12,19 @@ header>h1{
     font-size: 36px;
 }
 
-.grid-40{
+.grid-48{
 
     border: solid 2px;
-    margin-top: 0;
+    margin-top: 5%;
     margin-left: 0;
-    margin-right: 0;
+    margin-right: 2%;
     margin-bottom: 0;
 }
 
 .grid-100{
 
     border: solid 2px;
-    margin-top: 0;
+    margin-top: 5%;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
