--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -15,7 +15,7 @@ header>h1{
 .grid-45{
 
     border: solid 2px;
-    margin-top: 5%;
+    margin-top: 3%;
     margin-left: 0;
     margin-right: 2%;
     margin-bottom: 0;
@@ -24,8 +24,13 @@ header>h1{
 .grid-90{
 
     border: solid 2px;
-    margin-top: 5%;
+    margin-top: 3%;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
+}
+
+footer>p{
+
+    text-align: center;
 }
