--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -49,3 +49,10 @@ footer>p{
     margin-left: 30%;
     margin-bottom: 10%;
 }
+
+.form2{
+
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+}
